------------------
Pylint's ChangeLog
------------------


What's New in Pylint 2.10.0?
============================
Release date: TBA

..
  Put new features here and also in 'doc/whatsnew/2.10.rst'
..
  Put bug fixes that should not wait for a new minor version here

* pylint does not crash with a traceback anymore when a file is problematic. It
  creates a template text file for opening an issue on the bug tracker instead.
  The linting can go on for other non problematic files instead of being impossible.

* pyreverse: Show class has-a relationships inferred from the type-hint

  Closes #4744

* Added ``ignored-parents`` option to the design checker to ignore specific
  classes from the ``too-many-ancestors`` check (R0901).

  Partially closes #3057

* Added ``unspecified-encoding``: Emitted when open() is called without specifying an encoding

  Closes #3826

* Improved the Similarity checker performance. Fix issue with ``--min-similarity-lines`` used with ``--jobs``.

  Close #4120
  Close #4118

* Don't emit ``no-member`` error if guarded behind if statement.

  Ref #1162
  Closes #1990
  Closes #4168

* The default for ``PYLINTHOME`` is now the standard ``XDG_CACHE_HOME``, and pylint now uses ``appdirs``.

  Closes #3878

* Added ``use-list-literal``: Emitted when ``list()`` is called with no arguments instead of using ``[]``

  Closes #4365

* Added ``use-dict-literal``: Emitted when ``dict()`` is called with no arguments instead of using ``{}``

  Closes #4365

* Added ``forgotten-debug-statement``: Emitted when ``breakpoint``, ``pdb.set_trace`` or ``sys.breakpointhook`` calls are found

  Closes #3692

* Fix false-positive of ``unused-private-member`` when using nested functions in a class

  Closes #4673

* Fix crash for ``unused-private-member`` that occurred with nested attributes.

  Closes #4755

* Fix a false positive for ``unused-private-member`` with class names

  Closes #4681
