@@ -44,6 +44,8 @@ Extensions
 Other Changes
 =============
 
+* Pyreverse - add output in PlantUML format
+
 * pylint does not crash with a traceback anymore when a file is problematic. It
   creates a template text file for opening an issue on the bug tracker instead.
   The linting can go on for other non problematic files instead of being impossible.
